--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>W3.CSS Template</title>
+<title>20211552최성우 homework2</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -14,7 +14,7 @@
     <a href="#home" class="w3-bar-item w3-button"><b> Choisungwoo 20211552 </b></a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
-      <a href="#projects" class="w3-bar-item w3-button">Projects</a>
+      <a href="#projects" class="w3-bar-item w3-button">homework</a>
       <a href="#about" class="w3-bar-item w3-button">About</a>
       <a href="#contact" class="w3-bar-item w3-button">Contact</a>
     </div>
@@ -34,12 +34,11 @@
 
   <!-- Project Section -->
   <div class="w3-container w3-padding-32" id="projects">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Projects</h3>
-    <p class="w3-opacity"><i>homework2</i></p>
-    <p class="w3-justify">homework 2-1</p>
-    <p class="w3-justify">homework 2-2</p>
-    <p class="w3-justify">homework 2-3</p>
-    <p class="w3-justify">homework 2-4</p>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">homework</h3>
+    <p class="w3-justify"><a href="homework2-1.html">homework 2-1</a></p>
+    <p class="w3-justify"><a href="homework2-2.html">homework 2-2</a></p>
+    <p class="w3-justify"><a href="homework2-3.html">homework 2-3</a></p>
+    <p class="w3-justify"><a href="homework2-4.html">homework 2-4</a></p>
   </div>
 
   <div class="w3-row-padding">
